# druid-test

./: Cargo.toml  LICENSE  flake.nix
lib/: Cargo.toml
lib/src/: lib.rs  state.rs
src/: footer.rs  main.rs  ratio.rs  splitn.rs
widgets/: Cargo.toml
widgets/src/: lib.rs  ratio.rs  splitn.rs
