[package]
name = "yukari-widgets"
version = "0.1.0"
license = "BSD-3"
authors = ["Yokodake <yokodake@cinnabar.fr>"]
description = "custom druid widgets for the yukari filemanager"
repository = "https://github.com/yokodake/yukari"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }

[lib]
name = "yukari_widgets"
path = "src/lib.rs"